--- a/TranslationMod/languages/RU/dictionaries/Menus.json
+++ b/TranslationMod/languages/RU/dictionaries/Menus.json
@@ -57,12 +57,12 @@
     "Host Valley": "",
     "No response": "",
     "ghosted": "",
-    "Journal (@key)": "",
-    "Zoom In": "",
-    "Zoom Out": "",
+    "Journal (@key)": "Дневник(@key)",
+    "Zoom In": "Приблизить",
+    "Zoom Out": "Отдалить",
     "Paused": "Пауза",
-    "Exit To Title": "",
-    "Exit To Desktop": "",
+    "Exit To Title": "Выйти в меню",
+    "Exit To Desktop": "Выйти на рабочий стол",
     "@key @newline Avg. <:@number": "",
     "Inventory": "Инвентарь",
     "Skills": "Умения",
@@ -80,7 +80,7 @@
     "+ @number @key": "",
     "@number @key": "",
     "Requires @key @newline  @key": "Требуется @key @newline  @key",
-    "@farm Farm": "",
+    "@farm Farm": "@farm Ферма",
     "Current Funds: @number g": "",
     "Total Earnings: @number g": "",
     "Excellent! We'll get our workers on it tonight. It should be ready for you by tomorrow.": "",
@@ -143,23 +143,23 @@
     "New crafting recipe: @key": "",
     "No Saved Games Found": "",
     "Really delete file: @key?": "",
-    "Name": "",
-    "Farm @newline Name": "",
-    "Favorite @newline Thing": "",
+    "Name": "Имя",
+    "Farm@newlineName": "Название@newlineФермы",
+    "Favorite@newlineThing": "Любимая@newlineВещь",
     "Direction": "",
-    "Animal @newline Preference": "",
-    "Cat": "",
-    "Dog": "",
-    "Male": "",
-    "Female": "",
-    "Skin": "",
-    "Eye Color:": "",
-    "Hair": "",
-    "Hair Color:": "",
-    "Shirt": "",
-    "Pants Color:": "",
-    "Skip Intro": "",
-    "Acc": "",
+    "Animal@newlinePreference": "Предпочит@newlineЖивотных",
+    "Cat": "Кошка",
+    "Dog": "Собака",
+    "Male": "Мужчина",
+    "Female": "Женщина",
+    "Skin": "Кожа",
+    "Eye Color:": "Цвет глаз",
+    "Hair": "Волосы",
+    "Hair Color:": "Цвет волос",
+    "Shirt": "Рубашка",
+    "Pants Color:": "Цвет брюк",
+    "Skip Intro": "Пропуск интро",
+    "Acc.": "Аксс.",
     "Calico Desert": "",
     "Backwoods": "",
     "Bus Stop": "",
