Fixes and optimization

--- a/TranslationMod/languages/RU/dictionaries/AllUniqueItemNames.json
+++ b/TranslationMod/languages/RU/dictionaries/AllUniqueItemNames.json
@@ -13,6 +13,12 @@
     "36 Size Backpack":"Рюкзак 36 размера",
     "Lantern":"Лампа",
 
+    "Journal":"Дневник",
+    "Minerals":"Минералы",
+    "Artifacts":"Артефакты",
+    "Achievements":"Достижения",
+    "Organize":"Сортировать",
+
 "__comment":"Season names",
     "Spring":"",
     "Summer":"",
@@ -222,7 +228,7 @@
     "Earth Crystal":"Земной кристалл",
     "Coconut":"Кокос",
     "Cactus Fruit":"Плод Кактуса",
-    "Sap":"Сок",
+    "Sap":"Сок растения",
     "Torch":"Факел",
     "Spirit Torch":"Призрачный Факел",
     "Dwarf Scroll I":"Гномий Свиток I",
@@ -613,7 +619,6 @@
     "Sprinkler":"Ороситель",
     "Plum Pudding":"Сливовый пудинг",
     "Artichoke Dip":"Соус из артишоков",
-    "Stir Fry":"Стир-фрай",
     "Roasted Hazelnuts":"Жареный фундук",
     "Pumpkin Pie":"Тыквенный пирог",
     "Radish Salad":"Салат из редиса",
@@ -825,8 +830,8 @@
     "Stir Fry":"Овощное рагу",
     "Cranberry Candy":"Клюквенный конфетюр",
     "Bruschetta":"Брускетта",
-    "Coleslaw":"Капустный салатСалат из капусты",
-    "Chowder":"ПохлебкаЧаудер",
+    "Coleslaw":"Капустный салат",
+    "Chowder":"Чаудер",
 
 "__comment":"Data/CraftingRecipes",
     "﻿Wood Fence":"Деревянный  забор",
@@ -1051,7 +1056,7 @@
     "Little Photos":"Маленькие фотографии",
     "'Dancing Grass'":"'Танцующая трава'",
     "'VGA Paradise'":"'Рай VGA'",
-    "J. Cola Light":"Йойа Кола Лайт",
+    "J. Cola Light":"Светильник Джоджа Кола",
     "'Kitemaster '95'":"'Мастер хитрости 95'",
     "Basic Window":"Обычное окно",
     "Small Window":"Маленькое окно",
