--- a/TranslationMod/languages/RU/dictionaries/KeyWords.json
+++ b/TranslationMod/languages/RU/dictionaries/KeyWords.json
@@ -43,12 +43,14 @@
         "Cow": "Корова"
     },
     "BuffIcon": {
-        "Farming": "Фермерство",
+        "Farming": "Ферм-во",
         "Fishing": "Рыбалка",
-        "Mining": "Горное дело",
+        "Mining": "Добыча",
         "Combat": "Бой",
         "Luck": "Удача",
-        "Foraging": "Хранение",
+        "Foraging": "Собир-во",
+        "Other": "Остальное",
+        "Total": "Всего",
         "Max Energy": "Макс. Энергия",
         "Magnetism": "Очарование",
         "Speed": "Скорость",
@@ -84,7 +86,7 @@
         "Earth Crystal": "Земной кристалл",
         "Coconut": "Кокос",
         "Cactus Fruit": "Плод Кактуса",
-        "Sap": "Сок",
+        "Sap": "Сок растения",
         "Torch": "Факел",
         "Spirit Torch": "Призрачный Факел",
         "Dwarf Scroll I": "Гномий Свиток I",
