--- a/TranslationMod/languages/RU/dictionaries/MainDictionary.json
+++ b/TranslationMod/languages/RU/dictionaries/MainDictionary.json
@@ -14217,7 +14217,7 @@
             },
             {
                 "Key": "Potato Seeds/25/-300/Seeds -74/Plant these in the spring. Takes 6 days to mature, and has a chance of yielding multiple potatoes at harvest.",
-                "Value": "Семена Картофеля/25/-300/Seeds -74Весеннее растение. Через 6 дней уже созреет, а при сборе урожая есть шанс на получение нескольких плодов с куста."
+                "Value": "Семена Картофеля/25/-300/Seeds -74/Весеннее растение. Через 6 дней уже созреет, а при сборе урожая есть шанс на получение нескольких плодов с куста."
             },
             {
                 "Key": "Garlic Seeds/20/-300/Seeds -74/Plant these in the spring. Takes 4 days to mature.",
