--- a/TranslationMod/languages/RU/dictionaries/Object.cs.json
+++ b/TranslationMod/languages/RU/dictionaries/Object.cs.json
@@ -79,22 +79,22 @@
 
       "__comment":"Player Status",
         "Farm King":"Король Фермы",
-        "Cropmaster":"",
-        "Agriculturist":"",
-        "Farmer":"",
-        "Rancher":"",
-        "Planter":"",
-        "Granger":"",
-        "Farmgirl":"",
-        "Farmboy":"",
-        "Sodbuster":"",
-        "Smallholder":"",
-        "Tiller":"",
-        "Farmhand":"",
-        "Cowpoke":"",
-        "Bumpkin":"",
-        "Greenhorn":"",
-        "Newcomer":"",
+        "Cropmaster":"Мастер урожая",
+        "Agriculturist":"Агроном",
+        "Farmer":"Фермер",
+        "Rancher":"Ранчер",
+        "Planter":"Плантатор",
+        "Granger":"Управляющий",
+        "Farmgirl":"Фармгёрл",
+        "Farmboy":"Фармбой",
+        "Sodbuster":"Земледелец",
+        "Smallholder":"Мелкий фермер",
+        "Tiller":"Пахарь",
+        "Farmhand":"Батрак",
+        "Cowpoke":"Ленивый ковбой",
+        "Bumpkin":"Деревенщина",
+        "Greenhorn":"Новичок",
+        "Newcomer":"Приезжий",
 
       "You received @number @key":"Вы получили @number @key",
       "You received 15 Parsnip Seeds!^^'Here's a little something to get you started.^-Mayor Lewis'":"Вы получили 15 Семян Пастернака!^^Вот тебе кое-что для начала^-Мэр Льюис",
@@ -109,7 +109,7 @@
       "Right-Click":"Правый-клик",
 
   "__comment":"MoneyMadeScreen.cs",
-      "x@number : @numberg":"",
+      "x@key : @numberg":"x@key : @numberg",
       "Total: @numberg":"Всего: @numberg",
 
   "__comment":"NameSelect.cs",
@@ -324,7 +324,53 @@
 
 
 
-
-
-
+  "__comment":"Tools/*.cs except FishingRod and MelleeWeapon",
+      "Axe":"Топор",
+      "Used to chop wood.":"Им можно рубить деревья",
+      "You're only allowed to chop trees on your farm... It's a town rule.":"Вам можно рубить дереьвя только на ферме... Это городское правило",
+      "Farmer's Catalogue":"Каталог фермера",
+      "Use this to purchase buildings, animals, and more!":"Используйте, чтобы купить здания, животных и другое!",
+      "Hoe":"Мотыга",
+      "Used to dig and till soil.":"Используйте для копки грядок",
+      "Lantern":"Фонарь",
+      "Lights up dark places.":"Освещает темные места",
+      "Magnifying Glass":"Увеличительное стекло",
+      "Use this on your animals to see how they're doing.":"Используйте на животных чтобы узнать о них больше",
+      "Milk Pail":"Подойник",
+      "Gather milk from your animals.":"Используйте для дойки полока",
+      "@key doesn't produce milk.":"@key не производит молока",
+      "@key is too young to produce milk.":"@key слишком молода чтобы давать молоко.",
+      "@key has no milk right now.":"У @key сейчас нет молока",
+      "Copper Pan":"Медный поддон",
+      "Use to gather ore from streams.":"Используй для добычи руды из водоемов",
+      "Pickaxe":"Кирка",
+      "Used to break stones.":"Используй чтобы ломать камни",
+      "Your pickaxe isn't strong enough to break this yet.":"Ваша кирка ещё не достаточно крепка, чтобы сломать это.",
+      "Raft":"Плот",
+      "Not suitable for ocean use.":"Не подходит для использования в океане.",
+      "Seeds":"Семена",
+      "Plant these in tilled soil and water daily.":"Посадите их на грядке и поливайте каждый день.",
+      "Shears":"Ножницы",
+      "Use this to collect wool from sheep":"Используйте чтобы собирать шерсть с овец",
+      "@key doesn't produce wool.":"@key не производит шерсть.",
+      "@key is too young to be sheared.":"@key сликом молод для стрижки.",
+      "@key has no wool right now.":"У @key сейчас нет шерсти",
+      "Slingshot":"Рогатка",
+      "Master Slingshot":"Рогатка мастера",
+      "Galaxy Slingshot":"Галактическая рогатка",
+      "Out of ammo":"Кончились патроны",
+      "Right-Click to retrieve @key":"Правый клик чтобы восстановить @key",
+      "Right-Click to arm @newlinewith @key":"Правый клик чтобы вооружиться @newline с @key",
+      "Hero's Sword":"Меч Героя",
+      "A famous hero once owned this sword.":"Когда этим мечом владел известный герой.",
+      "Holy Sword":"Священный меч",
+      "A powerful relic infused with ancient energy.":"Мощный реликт наполненный древней энергией.",
+      "Dark Sword":"Темный меч",
+      "A powerful relic infused with evil energy.":"Мощный реликт наполненный энергией зла.",
+      "Galaxy Sword":"Галактический меч",
+      "The ultimate cosmic weapon.":"Непревзойденное космическое оружие",
+      "Wand":"Палочка",
+      "A beautiful old wand.":"Красивая старая палочка",
+      "Watering Can":"Лейка",
+      "Used to water crops. It can be refilled at any water source.":"Используйте для поливки растений. Может быть наполнена в любом источнике воды.",
 }
