--- a/TranslationMod/languages/RU/dictionaries/Object.json
+++ b/TranslationMod/languages/RU/dictionaries/Object.json
@@ -31,7 +31,7 @@
 	"You already know how to cook @key.":"",
 	"You learned how to cook '@key'!":"Вы научились готовить '@key'!",
 	"It's going to be clear and sunny all day.":"Весь день должно быть ясно и солнечно.",
-	"It's going to be a beautiful, sunny day tomorrow!":"Завтра Должен быть прекрасный, солнечный день!",
+	"It's going to be a beautiful, sunny day tomorrow!":"Завтра должен быть прекрасный, солнечный день!",
 	"It's going to rain all day tomorrow.":"Завтра должен быть дождь.",
 	"Partially cloudy with a light breeze. Expect lots of pollen!":"",
 	"It's going to snow all day. Make sure you bundle up, folks!":"",
