--- a/TranslationMod/languages/RU/dictionaries/Locations.json
+++ b/TranslationMod/languages/RU/dictionaries/Locations.json
@@ -27,8 +27,8 @@
 	"Old Mariner: I can see that sparkle in yer eye, lad. Ye must be head over heels in love. But I'm afraid a bigger house is essential for a happy marriage.":"",
 	"Old Mariner: I can see that sparkle in yer eye, miss. Ye must be head over heels in love. But I'm afraid a bigger house is essential for a happy marriage.":"",
 	"Old Mariner: Ah, I can see it in yer eyes... There be a special someone in yer heart. Just so happens I'm sellin' a 'Mermaid's Pendant'. Give that to yer intended and they'll know exactly what you mean.":"",
-	"Buy (5000g)":"",
-	"Not now...":"",
+	"Buy (5000g)":"Купить (5000g)",
+	"Not now...":"Не сейчас...",
 	"Old Mariner: I've got this old amulet to sell... but somethin' tells me yer not ready for it, lad." : "",
 	"Old Mariner: I've got this old amulet to sell... but somethin' tells me yer not ready for it, miss." : "",
 	"Can't upgrade while someone's inside.":"",
@@ -87,7 +87,6 @@
 	"When we're done here, we'll return to the other world.":"",
 	"The last bundle... Farewell... @player.":"",
 	"The @key has been restored!":"",
-	"The @key has been restored!":"",
 	"The Junimos have returned to the spirit world.":"",
 	"Return to Stardew Valley?":"",
 	"You've got a bunch of your stuff blocking the kitchen... I guess you're not getting dinner tonight.":"",
@@ -110,19 +109,16 @@
 	"If you become a Joja Member, the community center will become a Joja Warehouse, and you will no longer be able to refurbish it. However, Joja will provide an alternative means to improving the town. Are you sure you want to join?":"",
 	"Excellent! Welcome to Joja Corporation! Come back tomorrow and we can see about getting started on some community development projects... Oh, and don't forget your wallet! Hehe.#$b#Now, let me call Mayor Lewis and see about gutting that nasty old community center...":"",
 	"Come back tomorrow and we can see about getting some community improvements started... Just make sure to bring a lot of money. Hehe.":"",
-	"Welcome to JojaMart! How are you doing today?":"",
-	"I don't believe we've met. I'm Morris, Joja Customer Satisfaction Representative.":"",
-	"When you decide you want to become a Joja Member, I'll be delighted to help make your transition a joyous experience.":"",
-	"Welcome to JojaMart! How is your weekend going?":"",
-	"Welcome to JojaMart! How are you doing today?":"",
-	"We're currently in the process of setting up a brand-new membership system for our customers. Please check back soon to join!":"",
-	"Membership is now available! With a Joja Membership, you'll be able to make improvements in the community with the help of our dedicated personnel... for a fee, of course.":"",
-	"Oh, and another thing... Mayor Lewis promised us that if anyone else joined up, he'd let us turn that old community center into a Joja Warehouse. Isn't that wonderful?":"",
-	"Membership costs @number g. Well, would you like to join us?":"",
-	"Hmm... Our records show that you live on a farm with some other folks... I'm sorry, but we can only sell a membership to the owner of your residence.":"",
-	"We're currently processing your last Community Development order. Please come back after the work is complete.":"",
-	"I've got the Joja Community Development Form right here for you, sir. Care to take a look?":"",
-	"I've got the Joja Community Development Form right here for you, miss. Care to take a look?":"",
+	"Welcome to JojaMart! How are you doing today?#$b#I don't believe we've met. I'm Morris, Joja Customer Satisfaction Representative.#$b#When you decide you want to become a Joja Member, I'll be delighted to help make your transition a joyous experience.":"",
+	"Welcome to JojaMart! How is your weekend going?#$b#We're currently in the process of setting up a brand-new membership system for our customers. Please check back soon to join!":"",
+	"Welcome to JojaMart! How are you doing today?#$b#We're currently in the process of setting up a brand-new membership system for our customers. Please check back soon to join!":"",
+    "Welcome to JojaMart! How is your weekend going?#$b#Membership is now available! With a Joja Membership, you'll be able to make improvements in the community with the help of our dedicated personnel... for a fee, of course.#$b#Oh, and another thing... Mayor Lewis promised us that if anyone else joined up, he'd let us turn that old community center into a Joja Warehouse. Isn't that wonderful?#$q -1 -1#Membership costs @numberg. Well, would you like to join us?#$r -1 -1 -1#Yes.#$r -1 -1 -1#No.":"",
+    "Welcome to JojaMart! How are you doing today?#$b#Membership is now available! With a Joja Membership, you'll be able to make improvements in the community with the help of our dedicated personnel... for a fee, of course.#$b#Oh, and another thing... Mayor Lewis promised us that if anyone else joined up, he'd let us turn that old community center into a Joja Warehouse. Isn't that wonderful?#$q -1 -1#Membership costs @numberg. Well, would you like to join us?#$r -1 -1 -1#Yes.#$r -1 -1 -1#No.":"",
+	"Welcome to JojaMart! How are you doing today?#$b#Hmm... Our records show that you live on a farm with some other folks... I'm sorry, but we can only sell a membership to the owner of your residence.":"",
+	"Welcome to JojaMart! How is your weekend going?#$b#Hmm... Our records show that you live on a farm with some other folks... I'm sorry, but we can only sell a membership to the owner of your residence.":"",
+    "We're currently processing your last Community Development order. Please come back after the work is complete.":"",
+	"$q -1 -1#I've got the Joja Community Development Form right here for you, sir. Care to take a look?#$r -1 -1 -1#Yes#$r -1 -1 -1#No":"",
+	"$q -1 -1#I've got the Joja Community Development Form right here for you, miss. Care to take a look?#$r -1 -1 -1#Yes#$r -1 -1 -1#No":"",
 	"A way down has appeared.":"",
 	"This area is infested...":"",
 	"This area is overrun with monsters.":"",
@@ -182,9 +178,9 @@
 	"It's just the back of Lewis' old pickup truck...":"",
 	"Choose destination:":"",
 	"Out of Business.":"",
-	"Eww... What are you doing?":"",
-	"Um... Why are you digging in the trash?":"",
-	"Hey, Stop that! ...Yuck!":"",
+	"Eww... What are you doing?$s":"",
+	"Um... Why are you digging in the trash?$s":"",
+	"Hey, Stop that! ...Yuck!$s":"",
 	"- Pierre's General Store @newlineNow open 7 days a week From 9am-5pm!":"",
 	"--Old Master Cannoli--@newline...Still searching for the sweetest taste...":""
 }
