--- a/TranslationMod/languages/RU/dictionaries/NPC.json
+++ b/TranslationMod/languages/RU/dictionaries/NPC.json
@@ -81,7 +81,6 @@
 	"Oh, a birthday gift! Thank you.":"",
 	"Ow! I can't believe you would do that to me!":"",
 	"That hurt! What's your problem?":"",
-	"Be patient, I still have a lot of work to do.":"",
 	"Your house should be ready tomorrow.":"",
 	"I just feel like sleeping today.":"",
 	"I'm bored...":"",
@@ -96,37 +95,38 @@
 	"Don't you ever feel trapped?":"",
 	"*grumble*... chores...":"",
 	"Don't you have work to do?":"",
-	"Nghh... what is it? I'm trying to sleep.":"",
-	"I just don't feel like getting up today.":"",
-	"*sigh*... I just want to stay in bed.":"",
-	"Nnnghh... what is it? Make your own breakfast.":"",
-	"I had a bad dream, that's all.":"",
-	"I wonder how much the new baby will change things?":"",
-	"@key, I hope our adoption request gets approved. I want a baby.":"",
-	"@key, I filed our adoption papers. Now all we can do is cross our fingers and wait.":"",
-	"I'm pregnant... can't you make your own breakfast?":"",
-	"Ugh... I feel a little nauseated this morning.":"",
-	"@key, we're going to have a baby soon." :"",
-	"@key, I'm pregnant. Isn't it wonderful?":"",
-	"I just feel like sleeping today. Don't worry about it.":"",
-	"@key, we're going to have a baby soon." :"",
-	"@key, can't you tell? You're pregnant.":"",
-	"Being a parent is annoying, sometimes...  I just don't feel like getting up.":"",
-	"I need some alone time... Why don't you take care of the kids for a change?":"",
-	"I was going to make you breakfast, but I changed my mind.":"",
-	"I got up early and watered some crops for you. I hope it makes your job a little easier today.":"",
-	"I also filled @pet's water bowl.":"",
+	"Nghh... what is it? I'm trying to sleep.$a":"",
+	"I just don't feel like getting up today.$s":"",
+	"*sigh*... I just want to stay in bed.$s":"",
+	"Nnnghh... what is it? Make your own breakfast.$a":"",
+	"...$a#$e$I had a bad dream, that's all.$s":"",
+	"I wonder how much the new baby will change things?$s":"",
+	"@key, I hope our adoption request gets approved. I want a baby.$l":"",
+	"@key, I filed our adoption papers. Now all we can do is cross our fingers and wait.$l":"",
+	"I'm pregnant... can't you make your own breakfast?$s":"",
+	"Ugh... I feel a little nauseated this morning.$s":"",
+	"@key, we're going to have a baby soon.$l" :"",
+	"@key, I'm pregnant. Isn't it wonderful?$l":"",
+	"I just feel like sleeping today. Don't worry about it.$a":"",
+	"@key, can't you tell? You're pregnant.$l":"",
+	"Being a parent is annoying, sometimes...  I just don't feel like getting up.$a":"",
+	"I need some alone time... Why don't you take care of the kids for a change?$a":"",
+	"I was going to make you breakfast, but I changed my mind.$a":"",
+    "I got up early and watered some crops for you. I hope it makes your job a little easier today.":"",
+	"I got up early and watered some crops for you. I hope it makes your job a little easier today.#$e#I also filled @pet's water bowl.":"",
 	"Good Morning, @key! I got up early and watered some crops for you. I hope it makes your job a little easier today.":"",
-	"I got up early to water some crops and they were already done! You've really got this place under control.":"",
+	"Good Morning, @key! I got up early and watered some crops for you. I hope it makes your job a little easier today.#$e#I also filled @pet's water bowl.":"",
+	"I got up early to water some crops and they were already done! You've really got this place under control.$h":"",
 	"I got up early and fed all the farm animals. I hope that makes your job a little easier today.":"",
+	"I got up early and fed all the farm animals. I hope that makes your job a little easier today.#$e#I also filled @pet's water bowl.":"",
 	"I spent the morning repairing a few of the fences. They should be as good as new.":"",
+	"I spent the morning repairing a few of the fences. They should be as good as new.#$e#I also filled @pet's water bowl.":"",
 	"What do you think, @key? I ordered this the other day and it just arrived.":"",
 	"What do you think, @key? I figured the room could use a little more decoration.":"",
-	"I was going to do some decorating today, but I changed my mind.":"",
+	"I was going to do some decorating today, but I changed my mind.$a":"",
 	"What do you think of the new wallpaper I chose?":"",
 	"What do you think of the new flooring I chose?":"",
-	"*sigh*... sometimes I miss my old life.":"",
-	"The weather's too gloomy to get out of bed.":"",
-	"You could have cleaned up in here a little while I was gone...":"",
-	"It's not very nice to have to wade through a bunch of junk after a hard day's work.":""
+	"*sigh*... sometimes I miss my old life.$s":"",
+	"The weather's too gloomy to get out of bed.$s":"",
+	"You could have cleaned up in here a little while I was gone...$a#$e#It's not very nice to have to wade through a bunch of junk after a hard day's work.$a":""
 }
