--- a/TranslationMod/languages/RU/dictionaries/Event.cs.json
+++ b/TranslationMod/languages/RU/dictionaries/Event.cs.json
@@ -1,39 +1,38 @@
 {
-
-  "__comment":"Event.cs",
+"__comment":"Event.cs",
       "How many star tokens would you like to buy?":"",
       "How many star tokens would you like to wager?":"",
       "You don't have enough money.":"",
       "You've already bought everything in the shop!":"",
       "Choose a name":"",
-      "__comment":"male character cat, dog, then female character cat dog's names",
+"__comment":"male character cat, dog, then female character cat dog's names",
       "Dudley":"",
       "Yogi":"",
       "Miso":"",
       "Snooch":"",
       "No? Okay... I'll find a different home for the poor thing.$s":"",
-      "__comment":"i guess it's new dancing dialogues with spouse, are you exited?",
-      "__comment":"Abigail",
+"__comment":"i guess it's new dancing dialogues with spouse, are you exited?",
+    "__comment":"Abigail",
       "B... But... I wanted to dance with...$s#$b#Just kidding! Of course I'm dancing with you. I love you.$h":"",
-      "__comment":"Penny",
+    "__comment":"Penny",
       "I accept!$h#$b#*whisper* Thanks for going through with the formalities, dear.":"",
-      "__comment":"Maru",
+    "__comment":"Maru",
       "Of course... *whisper* Then can we go home and snuggle?$l":"",
-      "__comment":"Leah",
+    "__comment":"Leah",
       "Finally! I was starting to get worried you wanted to dance with someone else!$h":"",
-      "__comment":"Haley",
+    "__comment":"Haley",
       "*sigh*... My days of being Flower Queen are over... so it's a bittersweet dance for me.$s#$b#But, yes...":"",
-      "__comment":"Sebastian",
+    "__comment":"Sebastian",
       "Ugh... do we have to? Alright.":"",
-      "__comment":"Sam",
+    "__comment":"Sam",
       "Aw, I gotta put on that dorky suit again? I thought now that we're married... Well, alright.$s":"",
-      "__comment":"Harvey",
+    "__comment":"Harvey",
       "I've been looking forward to it all afternoon! You look radiant in the fresh spring air, my love.$l":"",
-      "__comment":"Elliott",
+    "__comment":"Elliott",
       "Yes... could I refuse that soft, kind face? The touch of spring-time's sweet embrace?":"",
-      "__comment":"Alex",
+    "__comment":"Alex",
       "Okay, this should be fun... I hope I can remember the moves this year! It's been a while...$h":"",
-      "__comment":"everybody else",
+    "__comment":"everybody else",
       "Of course I'll dance with you!$h":"",
 
       "You want to be my partner for the flower dance?#$b#Okay. I look forward to it.$h":"",
@@ -117,14 +116,12 @@
       "For":"",
       "Against":"",
 
-      "__comment":"elliottbooktalk",
+    "__comment":"elliottbooktalk",
       "I finished writing my book, and it ended up being a mystery novel! Remember when you told me you were into mystery?$h#$b#Behold, '@key', a thrilling tale of deception and intrigue!$u#$b#I -almost- feel like I should split the profits with you, considering how much help you gave me!$h":"",
-      "I finished writing my book! $h#$b#Well, here it is... '@key'. It's about a government land surveyor who visits a tiny, isolated mining community... and discovers some disturbing secrets.$u#$b#I -almost- feel like I should split the profits with you, considering how much help you gave me!$h" :"",
+      "I finished writing my book! $h#$b#Well, here it is... '@key'. It's about a government land surveyor who visits a tiny, isolated mining community... and discovers some disturbing secrets.$u#$b#I -almost- feel like I should split the profits with you, considering how much help you gave me!$h":"",
       "I finished writing my book, and it's a sci-fi novel! Remember when you told me you were a fan of sci-fi?$h#$b#Behold, '@key'. It's about a boy who forms a symbiotic partnership with a semi-telepathic lifeform. Together they unravel the dark mysteries of an interstellar cabal.$u#$b#I -almost- feel like I should split the profits with you, considering how much help you gave me!$h":"",
       "I finished writing my book, and it ended up being a romance novel! ...You told me once that you enjoyed the genre, and, well, I've also been able to draw some inpsiration from real life experiences lately. $l#$b#Here it is, '@key'. It's about a train stewardess who falls in love with a traveling architect... but he's secretly engaged to the ticket collector's daughter!#$b#I *almost* feel like I should split the profits with you, considering how much help you gave me!$h":"",
-
-
-      "__comment":"speak Grandpa",
+    "__comment":"speak Grandpa",
       "The farm hasn't changed much all that much since we last spoke... but that's okay.#$b#If you're enjoying your new life, that's all that matters to me...#$b#I must return to the other world, now... but feel free to call on me again when you're ready.":"",
       "You've done a good job improving the place since we last spoke.#$b#It seems you've tried your best... that's all I can ask for. I'm proud of you.#$b#I must return to the other world, now... but feel free to call on me again when you're ready.":"",
       "You've done well, my boy.^You've done well, my dear.#$b#@key Farm has never looked better. It's an honor to the family name.#$b#Grandpa is pleased.#$b#I must return to the other world, now... but feel free to call on me again when you're ready.":"",
@@ -213,5 +210,5 @@
       "You don't like it, huh? Bah! Kids these days... no appreciation for anything. That was expensive, and I'm not made of money, you know!" :"",
       "It's nothing fancy, but It's the best I could afford.":"",
       "Um, excuse me.#$b#I have a gift for you. I found it last summer when I was playing at the beach. I hope you like it.$h":"",
-      "I'm glad you moved here, farmer @player!$h":"",
+      "I'm glad you moved here, farmer @player!$h":""
 }
