More optimization, fixes, add cyriller.dll

--- a/TranslationMod/languages/RU/dictionaries/AllUniqueItemNames.json
+++ b/TranslationMod/languages/RU/dictionaries/AllUniqueItemNames.json
@@ -18,6 +18,15 @@
     "Artifacts":"Артефакты",
     "Achievements":"Достижения",
     "Organize":"Сортировать",
+    "am":"am",
+    "pm":"pm",
+    "Mon. @number":"Пн. @number",
+    "Tue. @number":"Вт. @number",
+    "Wed. @number":"Ср. @number",
+    "Thu. @number":"Чт. @number",
+    "Fri. @number":"Пт. @number",
+    "Sat. @number":"Сб. @number",
+    "Sun. @number":"Вс. @number",
 
 "__comment":"Season names",
     "Spring":"",
@@ -954,22 +963,22 @@
     "Yellow Couch":"Желтый диван",
     "Brown Couch":"Коричневый диван",
     "Dark Couch":"Черный диван",
-    "Wizard Couch":"Волшебный диванДиван волшебника",
+    "Wizard Couch":"Диван волшебника",
     "Woodsy Couch":"Деревянный диван",
     "Oak Dresser":"Дубовый комод",
     "Walnut Dresser":"Ореховый комод",
     "Birch Dresser":"Березовый комод",
-    "Mahogany Dresser":"Коричнево-красный комодКомод из красного дерева",
+    "Mahogany Dresser":"Комод из красного дерева",
     "Coffee Table":"Кофейный стол",
     "Stone Slab":"Каменная плита",
     "Winter Dining Table":"Зимний обеденный стол",
     "Festive Dining Table":"Праздничный обеденный стол",
-    "Mahogany Dining Table":"Коричнево-красный обеденный стол",
+    "Mahogany Dining Table":"Обеденный стол из красного дерева",
     "Modern Dining Table":"Современный обеденный стол",
     "Oak Table":"Дубовый стол",
     "Walnut Table":"Ореховый стол",
     "Birch Table":"Березовый стол",
-    "Mahogany Table":"Коричнево-красный столСтол из красного дерева",
+    "Mahogany Table":"Стол из красного дерева",
     "Sun Table":"Солнечный стол",
     "Moon Table":"Лунный стол",
     "Modern Table":"Современный стол",
@@ -985,48 +994,48 @@
     "Oak Tea-Table":"Дубовый чайный столик",
     "Walnut Tea-Table":"Ореховый чайный столик",
     "Birch Tea-Table":"Березовый чайный столик",
-    "Mahogany Tea-Table":"Коричнево-красный чайный столик",
+    "Mahogany Tea-Table":"Чайный столик из красного дерева",
     "Modern Tea-Table":"Современный чайный столик",
     "China Cabinet":"Китайский шкаф",
     "Artist Bookcase":"Художественный стеллаж",
     "Luxury Bookcase":"Роскошный стеллаж",
     "Modern Bookcase":"Современный стеллаж",
     "Dark Bookcase":"Темный стеллаж",
-    "Ceramic Pillar":"Керамический столбКафельная колоннаКирпичная колонна",
+    "Ceramic Pillar":"Кирпичная колонна",
     "Gold Pillar":"Золотой столбЗолотая колонна",
     "Industrial Pipe":"Промышленная труба",
     "Indoor Palm":"Комнатная пальма",
     "Totem Pole":"Тотемный столб",
     "Manicured Pine":"Ухоженная сосна",
     "Topiary Tree":"Стриженное дерево",
-    "Standing Geode":"Стойка из геодаЖеода на постаментеЖеода на подставке",
+    "Standing Geode":"Геод на подставке",
     "Obsidian Vase":"Обсидиановая ваза",
     "Singing Stone":"Поющий камень",
-    "Sloth Skeleton L":"Скелет ленивца LСкелет ленивца (Л)",
-    "Sloth Skeleton M":"Скелет ленивцаСкелет ленивца (С)",
-    "Sloth Skeleton R":"Скелет ленивца RСкелет ленивца (П)",
+    "Sloth Skeleton L":"Скелет ленивца (Л)",
+    "Sloth Skeleton M":"Скелет ленивца (С)",
+    "Sloth Skeleton R":"Скелет ленивца (П)",
     "Skeleton":"Скелет",
     "Chicken Statue":"Статуя курици",
     "Leah's Sculpture":"Скульптура Лии",
-    "Dried Sunflowers":"Сушеные подсолнухиСухие подсолнухи",
+    "Dried Sunflowers":"Сухие подсолнухи",
     "Small Plant":"Маленькое растение",
-    "Table Plant":"Столик с растениемНастольное растение",
+    "Table Plant":"Настольное растение",
     "Decorative Bowl":"Декоративная чаша",
     "Futan Bear":"Плюшевый мишка",
     "Globe":"Глобус",
     "Model Ship":"Модель корабля",
-    "House Plant":"Домашний цветокКомнатное растение",
+    "House Plant":"Комнатное растение",
     "Oak End Table":"Дубовый столик",
     "Walnut End Table":"Ореховый столик",
     "Birch End Table":"Березовый столик",
-    "Mahogany End Table":"Коричнево-красный столик",
+    "Mahogany End Table":"Столик из красного дерева",
     "Modern End Table":"Современный столик",
     "Grandmother End Table":"Бабушкин столик",
     "Winter End Table":"Зимний столик",
     "Calendar":"Календарь",
     "Tree of the Winter Star":"Новогодняя елка",
     "Country Lamp":"Деревенская ламка",
-    "Box Lamp":"Лампа в прозрачной коробкеЛампа-короб",
+    "Box Lamp":"Лампа-короб",
     "Modern Lamp":"Современная лампа",
     "Classic Lamp":"Классическая лампа",
     "Red Rug":"Красный ковер",
