--- a/TranslationMod/languages/RU/dictionaries/Menus.json
+++ b/TranslationMod/languages/RU/dictionaries/Menus.json
@@ -17,7 +17,8 @@
     "Are you sure?": "",
     "Please choose a @keyV for your @keyR": "",
     "__comment": "Menus/Billboard.cs",
-    "@key Birthday": "",
+    "@key's Birthday": "День рождения @keyR",
+    "@key' Birthday": "День рождения @keyR",
     "Nothing is posted today.": "",
     "Accept Quest": "",
     "__comment": "Menus/BlueprintsMenu.cs",
@@ -50,7 +51,7 @@
     "Total Found: @number": "Всего найдено: @number",
     "Times Cooked: @number": "Приготовлено раз: @number",
     "Number Caught: @number": "Поймано раз: @number",
-    "Biggest Catch: @number in.": "Наибольший улов: @numberдюйм.",
+    "Biggest Catch: @number in.": "Наибольший улов: @number дюйм.",
     "Number Found: @number": "Кол-во найдено: @number",
     "Number Shipped: @number": "Кол-во продано: @number",
     "Join Valley": "",
@@ -313,6 +314,13 @@
     "+@number Axe Efficiency": "",
     "+@number Pickaxe Efficiency": "",
     "+@number Health": "+@number Здоровья",
+    "+@number Energy": "+@number Энергии",
+    "-@number Hoe Efficiency @newline -@number Water Can Efficiency": "",
+    "-@number Fishing Rod Efficiency": "",
+    "-@number Axe Efficiency": "",
+    "-@number Pickaxe Efficiency": "",
+    "-@number Health": "-@number Здоровья",
+    "-@number Energy": "-@number Энергии",
     "Wallet": "Бумажник",
     "HA! Now that's what I like to see! Here, have a star token.": "",
     "Strength Level: @key": "",
