--- a/TranslationMod/languages/RU/dictionaries/MiniGames.json
+++ b/TranslationMod/languages/RU/dictionaries/MiniGames.json
@@ -2,6 +2,8 @@
 	"Game Over":"Конец игры",
 	"Restart":"Рестарт",
 	"Quit":"Выход",
+	"> Restart":"> Рестарт",
+	"> Quit":"> Выход",
 	"Here they come!":"",
 	"Half-way done!":"",
 	"Hey! We did it!":"",
