--- a/TranslationMod/languages/RU/dictionaries/Object.json
+++ b/TranslationMod/languages/RU/dictionaries/Object.json
@@ -28,7 +28,7 @@
 	"Hoo.. I see a glimmer within my scrying orb... A shard of knowledge from the future!":"",
 	"Welcome to Welwick's Oracle... the ONLY show where the voice of the spirits is channeled directly... to YOU.":"",
 	"Welcome to KOZU 5... your number one source for weather, news, and entertainment.^And now, the weather forecast for tomorrow...":"",
-	"You already know how to cook @key.":"",
+	"You already know how to cook @key.":"Вы уже умеете готовить @key.",
 	"You learned how to cook '@key'!":"Вы научились готовить '@key'!",
 	"It's going to be clear and sunny all day.":"Весь день должно быть ясно и солнечно.",
 	"It's going to be a beautiful, sunny day tomorrow!":"Завтра должен быть прекрасный, солнечный день!",
