Move Translation Logic to TranslationMod class

--- a/TranslationMod/languages/RU/dictionaries/Menus.json
+++ b/TranslationMod/languages/RU/dictionaries/Menus.json
@@ -97,17 +97,17 @@
     "New @key recipe:": "",
     "'@key'": "'@key'",
     "Level @number @newline  @number": "Уровень @key @newline  @number",
-    "+1 Watering Can Proficiency": "",
-    "+1 Hoe Proficiency": "",
-    "+1 Fishing Rod Proficieny": "",
-    "+1 Axe Proficiency": "",
-    "Trees sometimes drop seeds.": "",
-    "+1 Wild berry harvesting.": "",
-    "+1 Pickaxe Proficiency": "",
-    "+5 HP": "",
-    "Luck Increased": "",
-    "Animal products worth 10% more.": "",
-    "Crops worth 10% more.": "",
+    "+1 Watering Can Proficiency": "+1 к владению Лейкой",
+    "+1 Hoe Proficiency": "+1 к владению Мотыгой",
+    "+1 Fishing Rod Proficieny": "+1 к владению Удочкой",
+    "+1 Axe Proficiency": "+1 к владению Топором",
+    "Trees sometimes drop seeds.": "Деревя иногда роняют семена.",
+    "+1 Wild berry harvesting.": "+1 к собирательству диких ягод",
+    "+1 Pickaxe Proficiency": "+1 к владению Киркой",
+    "+5 HP": "+5 жизни",
+    "Luck Increased": "Удача увеличена",
+    "Animal products worth 10% more.": "Животные рподукты стоят на 10% дороже.",
+    "Crops worth 10% more.": "Растения стоят на 10% больше.",
     "Befriend coop animals quicker.": "",
     "Incubation time cut in half.": "",
     "Befriend barn animals quicker.": "",
